--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,11 @@
 # 开发环境, 使用 process.env 获取,自定义 参数 必须要以 VUE_APP_ 开头
 ENV = 'development'
 
+# 当前版本
+VUE_APP_PC_VERSION = '2000-08-25'
+
+# 其他内容
+VUE_HELLO = 'hello word'
+
 # base api
 VUE_APP_BASE_API = '/dev-api'
